fix safari blog image overflow

--- a/src/styles/blog.module.scss
+++ b/src/styles/blog.module.scss
@@ -26,6 +26,11 @@
 
 .thumbnail {
   border-radius: 8px;
+  overflow: hidden;
+
+  img {
+    border-radius: 8px;
+  }
 }
 
 main.articles {
